[gd_scene load_steps=10 format=2]

[ext_resource path="res://cut-scene-driver/CutSceneDriver.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/CanvasLayer/TextContainer/SceneText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/CanvasLayer/TextContainer/SceneText:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Backgound:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "finish"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_switch_scene"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/CanvasLayer/TextContainer/PressAnyKeyCaption:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/Overlay:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/CanvasLayer/TextContainer/SceneText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/CanvasLayer/TextContainer/PressAnyKeyCaption:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.6, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "camera_transition"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 5
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 5
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
font_data = ExtResource( 3 )

[node name="CutSceneDriver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/finish = SubResource( 1 )
anims/start = SubResource( 2 )

[node name="BackgroundTransition" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/camera_transition = SubResource( 7 )

[node name="Backgound" type="TextureRect" parent="."]
stretch_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="TextContainer" type="ColorRect" parent="Camera2D/CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -40.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 12 )
color = Color( 0, 0, 0, 1 )

[node name="SceneText" type="RichTextLabel" parent="Camera2D/CanvasLayer/TextContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
grow_vertical = 0
rect_min_size = Vector2( 308, 12 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 4 )
visible_characters = 0
percent_visible = 0.0
fit_content_height = true
scroll_active = false

[node name="PressAnyKeyCaption" type="Label" parent="Camera2D/CanvasLayer/TextContainer"]
margin_left = 2.0
margin_top = -12.0
margin_right = 145.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 5 )
text = "Press any key to continue"

[node name="Overlay" type="ColorRect" parent="Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 180 )
color = Color( 0, 0, 0, 1 )
